# CS739-P4

./: Cargo.toml  README  TEAM  build.rs  readme.md
proto/: hello.proto  sah.proto  synth_rpc.proto
src/: comms.rs  lib.rs  synth_comms.rs
src/fclient/: client.rs
src/frontend/: client.rs
src/hello/: client.rs  server.rs
src/hello-stream/: client.rs  server.rs
src/leader/: server.rs
src/naive/: aggregation.rs  dispatching.rs  encoding.rs  enumeration.rs  haystack.rs  leader.rs  mod.rs  synth.rs
src/server/: main.rs
src/shared/: aggregation.rs  dispatching.rs  haystack.rs  int_expr_grammar.rs  mod.rs
src/vclient/: client.rs
src/volunteer/: client.rs
