[package]
name = "solving-at-home"
version = "0.1.0"
edition = "2021"

[lib]
name="sah_lib"
path="src/lib.rs"

[[bin]]
name="hello-server"
path="src/hello/server.rs"
[[bin]]
name="hello-client"
path="src/hello/client.rs"

[[bin]]
name="hello-stream-server"
path="src/hello-stream/server.rs"
[[bin]]
name="hello-stream-client"
path="src/hello-stream/client.rs"

[[bin]]
name="volunteer-client"
path="src/vclient/client.rs"

[[bin]]
name="frontend-client"
path="src/fclient/client.rs"
[[bin]]
name="server"
path="src/server/main.rs"


[dependencies]
anyhow = "1.0.57"
async-stream = "0.3.3"
async-trait = "0.1.53"
counter = "0.5.5"
crossbeam-channel = "0.5.4"
futures = "0.3.21"
futures-core = "0.3.21"
prost = "0.10.3"
tokio = { version = "1.18.2", features = ["macros", "rt-multi-thread", "time", "fs"] }
tokio-stream = "0.1.8"
tokio-util = "0.7.1"
tonic = "0.7.2"

[build-dependencies]
tonic-build = { version = "0.7.2", features = ["prost"]}#, "compression"] }

